[gd_scene load_steps=3 format=3 uid="uid://1oj4x5t7amoq"]

[ext_resource type="Script" uid="uid://bau8revsnaovh" path="res://menu_scenes/settings.gd" id="1_eip2t"]
[ext_resource type="PackedScene" uid="uid://8iv8lhit36xn" path="res://ui/back_button.tscn" id="1_j4hei"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eip2t")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -86.5
offset_top = -32.5
offset_right = 86.5
offset_bottom = 32.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ItemSize" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ItemSizeLabel" type="Label" parent="VBoxContainer/ItemSize"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "Item size"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ItemSizeSlider" type="HSlider" parent="VBoxContainer/ItemSize"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
min_value = 20.0
max_value = 60.0
value = 30.0
exp_edit = true
rounded = true

[node name="ResetParamsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Reset params"

[node name="ResetProgressButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Reset progress"

[node name="BackButton" parent="." instance=ExtResource("1_j4hei")]
layout_mode = 0

[node name="AcceptDialog" type="AcceptDialog" parent="."]
title = "Done!"

[connection signal="value_changed" from="VBoxContainer/ItemSize/ItemSizeSlider" to="." method="_on_item_size_slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/ResetParamsButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ResetProgressButton" to="." method="_on_reset_progress_button_pressed"]
